[project]
name = "yt-dlp-script"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pillow>=11.3.0",
    "pyinstaller>=6.14.2",
    "pyside6>=6.9.1",
    "pyside6-fluent-widgets[full]>=1.8.3",
    "ruff>=0.12.2",
    "streamlink==7.4.0",
    "ty>=0.0.1a13",
    "typer>=0.16.0",
    "websockets>=15.0.1",
    "yt-dlp",
]
